--- a/src/component/Interview-algorithm-problem/Debounce.html
+++ b/src/component/Interview-algorithm-problem/Debounce.html
@@ -1,5 +1,6 @@
-<!-- 节流的概念是：在一段时间内，事件被触发多次，但事件处理函数只在最后
-  一次事件触发后延迟一段时间才执行一次。 -->
+<!-- 防抖是一种优化高频率触发事件（如滚动、输入等）的技术，它确保函
+    数只会在最后一次触发事件后的一段时间（即给定的延迟时间）后执行一次。
+   -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -14,10 +15,16 @@
   <button id="myButton">点击我</button>
   <script>
     function debounce(func, delay) {
+      // 用于存储 setTimeout 返回的 ID，以便在需要时清除它  
       let timeout;
+      //  返回一个新的函数，这个新函数将在每次触发时被调用
+      // ...args 用于捕获所有传递给返回函数（内部函数）的参数，并将它们作为数组传递给 func 函数。  
       return function (...args) {
+        // 这样确保每次触发时，之前设定的延迟执行都会被取消
         clearTimeout(timeout);
         timeout = setTimeout(() => {
+          // 使用 apply 方法确保 func 函数在正确的上下文中执行（this 指向）
+          // 并传入当前触发防抖函数的参数  
           func.apply(this, args);
         }, delay);
       };
@@ -42,3 +49,8 @@
 </body>
 
 </html>
+
+<!-- const debouncedFunction = debounce(myFunction, 200);
+debouncedFunction('hello', 123, true);
+在这个例子中，args 数组将会是 ['hello', 123, true]。然后，这个数组会被传递给 setTimeout 回调函数中的 func.apply(context, args);，这样 myFunction
+就会被以正确的参数和上下文调用。 -->
