--- a/src/component/particles/index.html
+++ b/src/component/particles/index.html
@@ -8,7 +8,8 @@
     <title>Document</title>
     <style>
         body {
-            background-color: #334659;
+            background-color: #ffffff;
+            color: rgb(148, 148, 148);
         }
     </style>
 </head>
@@ -24,12 +25,12 @@
                 vy: 4,	//小球y轴速度
                 height: 2,	//小球高宽，其实为正方形，所以不宜太大
                 width: 2,
-                count: 200,		//点个数
-                color: "255, 255, 255", 	//点颜色
-                stroke: "255,255,255", 		//线条颜色
+                count: 150,		//点个数
+                color: "208, 208, 208", 	//点颜色
+                stroke: "148, 148, 148", 		//线条颜色
                 dist: 6000, 	//点吸附距离
                 e_dist: 20000, 	//鼠标吸附加速距离
-                max_conn: 10 	//点到点最大连接数
+                max_conn: 6 	//点到点最大连接数
             }
 
             //调用
