--- a/src/component/react18-cartList/02-demo.html
+++ b/src/component/react18-cartList/02-demo.html
@@ -1,27 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
-    *{margin: 0; padding: 0;}
-    li{ list-style: none;}
-    .cart{ width: 700px; margin: 30px auto;}
-    ul{ overflow: hidden;}
-    li{ width: 100px; border: 5px gray dotted; border-radius: 20px; padding: 20px; float: left; margin:10px;}
-    .remove, .add{ cursor: pointer;}
-    .cartbtn{ font-size:14px; text-align: center; background: red; color: white; padding: 3px; border-radius: 5px; margin-top: 10px; cursor: pointer;}
-    li.active{ border-color:red;}
-    li.active .cartbtn{ background-color: skyblue;}
-    .all{ text-align: center; margin: 20px 0;}
+    * {
+      margin: 0;
+      padding: 0;
+    }
+
+    li {
+      list-style: none;
+    }
+
+    .cart {
+      width: 700px;
+      margin: 30px auto;
+    }
+
+    ul {
+      overflow: hidden;
+    }
+
+    li {
+      width: 100px;
+      border: 5px gray dotted;
+      border-radius: 20px;
+      padding: 20px;
+      float: left;
+      margin: 10px;
+    }
+
+    .remove,
+    .add {
+      cursor: pointer;
+    }
+
+    .cartbtn {
+      font-size: 14px;
+      text-align: center;
+      background: red;
+      color: white;
+      padding: 3px;
+      border-radius: 5px;
+      margin-top: 10px;
+      cursor: pointer;
+    }
+
+    li.active {
+      border-color: red;
+    }
+
+    li.active .cartbtn {
+      background-color: skyblue;
+    }
+
+    .all {
+      text-align: center;
+      margin: 20px 0;
+    }
   </style>
   <script src="https://unpkg.com/react@18.3/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@18.3/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/babel-standalone@6.26.0/babel.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
 </head>
+
 <body>
   <div id="app"></div>
   <script type="text/babel">
@@ -34,10 +81,10 @@
         all: 0
       }
       componentDidMount = () => {
-        fetch('./data.json').then((res)=>{
+        fetch('./data.json').then((res) => {
           return res.json();
-        }).then((res)=>{
-          if(res.errcode === 0){
+        }).then((res) => {
+          if (res.errcode === 0) {
             console.log(res, 'res.json()')
             this.setState({
               list: res.list
@@ -51,7 +98,7 @@
       handleAdd = (id) => {
         return () => {
           let list = _.cloneDeep(this.state.list)
-          let now = list.find((v)=> v.id === id)
+          let now = list.find((v) => v.id === id)
           now.number++;
           this.setState({
             list
@@ -61,8 +108,8 @@
       handleRemove = (id) => {
         return () => {
           let list = _.cloneDeep(this.state.list)
-          let now = list.find((v)=> v.id === id)
-          if( now.number > 1 ){
+          let now = list.find((v) => v.id === id)
+          if (now.number > 1) {
             now.number--;
           }
           this.setState({
@@ -73,7 +120,7 @@
       handleCartBtn = (id) => {
         return () => {
           let list = _.cloneDeep(this.state.list)
-          let now = list.find((v)=> v.id === id)
+          let now = list.find((v) => v.id === id)
           now.isActive = !now.isActive
           this.setState({
             list
@@ -82,34 +129,34 @@
       }
       computedAll = () => {
         let all = 0;
-        this.state.list.filter((v)=> v.isActive).forEach((v)=>{
+        this.state.list.filter((v) => v.isActive).forEach((v) => {
           all += v.price * v.number;
         })
         this.setState({
           all
         });
       }
-      render(){
+      render() {
         return (
           <div className="cart">
             <ul>
               {
-                this.state.list.map((v)=> <Item key={v.id} {...v} handleAdd={this.handleAdd} handleRemove={this.handleRemove} handleCartBtn={this.handleCartBtn} />)
+                this.state.list.map((v) => <Item key={v.id} {...v} handleAdd={this.handleAdd} handleRemove={this.handleRemove} handleCartBtn={this.handleCartBtn} />)
               }
-              
+
             </ul>
             <div className="all">
-              总金额：<span>{ this.state.all }</span>元
+              总金额：<span>{this.state.all}</span>元
             </div>
           </div>
         );
       }
     }
     class Item extends React.PureComponent {
-      render(){
+      render() {
         const { id, isActive, name, price, number, handleAdd, handleRemove, handleCartBtn } = this.props;
         return (
-          <li className={ isActive ? 'active' : '' }>
+          <li className={isActive ? 'active' : ''}>
             <h3>{name}</h3>
             <p>单价：{price}</p>
             <p>
@@ -118,7 +165,7 @@
               <span>{number}</span>
               <span className="add" onClick={handleAdd(id)}>+</span>
             </p>
-            <div className="cartbtn" onClick={handleCartBtn(id)}>{  isActive ? '取消购买' : '添加到购物车'  }</div>
+            <div className="cartbtn" onClick={handleCartBtn(id)}>{isActive ? '取消购买' : '添加到购物车'}</div>
           </li>
         );
       }
@@ -127,9 +174,10 @@
     let element = (
       <Cart />
     );
-    
+
     root.render(element)
 
   </script>
 </body>
+
 </html>
